2010-03-17  Drew Wilson  <atwilson@chromium.org>

        Reviewed by David Levin.

        Add tests for "load shared worker in iframe" case.
        https://bugs.webkit.org/show_bug.cgi?id=36203

        Makes sure that creating a worker simultaneously in a document and in
        a child iframe works (you end up with a single instance).

        * fast/workers/resources/shared-worker-count-connections.js: Added.
        * fast/workers/resources/shared-worker-iframe.html: Added.
        * fast/workers/shared-worker-in-iframe-expected.txt: Added.
        * fast/workers/shared-worker-in-iframe.html: Added.

2010-03-17  Shu Chang  <Chang.Shu@nokia.com>

        Reviewed by Eric Seidel.

        [Qt] Rebaseline the test and remove it from Skipped.
        https://bugs.webkit.org/show_bug.cgi?id=36059

        * platform/qt/Skipped:
        * platform/qt/fast/canvas/canvas-text-baseline-expected.checksum: Added.
        * platform/qt/fast/canvas/canvas-text-baseline-expected.png: Added.
        * platform/qt/fast/canvas/canvas-text-baseline-expected.txt: Added.

2010-03-17  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Dimitri Glazkov.

        [v8] Avoid reentry into v8 after TerminateExecution() on a worker thread.
        https://bugs.webkit.org/show_bug.cgi?id=36239

        * fast/workers/resources/termination-with-port-messages.js: Added.
        (echo):
        (onmessage):
        * fast/workers/termination-with-port-messages-expected.txt: Added.
        * fast/workers/termination-with-port-messages.html: Added.

2010-03-17  Kenneth Russell  <kbr@google.com>

        Reviewed by Darin Fisher.

        Revert WebGL context attributes changes 33416 / r56074 and 36200 / r56093
        https://bugs.webkit.org/show_bug.cgi?id=36233

        The patch for bug 33416, which added multisampling support to the
        WebGL back buffer, uncovered some OpenGL driver bugs on the build
        bots which need further investigation to determine the appropriate