@@ -1,3 +1,12 @@
+2010-03-17  Chang Shu  <chang.shu@nokia.com>
+
+        Reviewed by Laszlo Gombos.
+
+        https://bugs.webkit.org/show_bug.cgi?id=36139
+        [Qt] Unskip the test that now passes.
+
+        platform/qt/Skipped:
+
 2010-03-17  Drew Wilson  <atwilson@chromium.org>
 
         Reviewed by David Levin.
